CruiseControl Release Notes - Latest CVS

AntPublisher:
----------------------
* Will now pass the property "thisbuildsuccessful" to the ant script.

contrib:
----------------------
* Add support for distributed building (CC-137). Submitted by Jeff Ramsdale

CVSBootstrapper:
----------------------
* Add overwriteChanges attribute.

DefaultLabelIncrementer:
----------------------
* Fixed bug when using non-default label separator (CC-155). Patch by Jerome Lacoste

FTPPublisher:
----------------------
* Made setDeleteArtifacts take a boolean argument, instead of parsing a String as a boolean, for consistency with other plugins (CC-158).
  This means that you MUST use "true" or "false" now in your config file for deleteArtifacts-attribute, and not "yes" or "no"!

HTMLEmailPublisher:
----------------------
* Now tries to determine the locations for xslDir and css automatically when they're not specified

index.jsp:
----------------------
* Use rounded corners on the right of the page (CC-113). Patch by Mark Doliner

JMX:
----------------------
* Add ability to require username/password for JMX interface (CC-128). Patch by Glenn Brown
* Upgraded to MX4J 3.0.1

Macker:
----------------------
* Add support for Macker in HTMLEmailPublisher and reporting/JSP app. Patch by Andrew Sadler

P4:
----------------------
* Use double quote only on Windows, single quote otherwise.

JMX Support:
----------------------
* Expose Project's BuildStartTime as JMX attribute (CC-92). Patch by Jerome Lacoste

SCPPublisher:
----------------------
* No longer remove first char from xml log file path, since it now causes errors. Patch by Dan Penhurst

SelfConfiguringPlugin:
----------------------
* Add new SelfConfiguringPlugin interface. Submitted by Jeff Ramsdale

TimeBuild:
----------------------
* Add new source control that will trigger a build at a specified time. Submitted by Eric Pugh

VSS(Journal):
----------------------